verificar_usuario en index.html

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-md-4">
                     <div class="btn">
                         <h3>Inicia Sesion</h3>
-                        <form method="GET" action="login.php">
+                        <form method="GET" action="verificar_usuario.php">
                             <ul>
                                 <li><label for="usuario" >Usuario</label></li>
                                 <li><input id="usuario" class="text"></li>
