Empezando Parte 2 Admin
Sumidero Admin

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@ session_start();
 
     <link href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/shift.css" rel="stylesheet">
     <link rel="stylesheet" href="http://s3.amazonaws.com/codecademy-content/courses/ltp/css/bootstrap.css">
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/fondo.css">
+    <link rel="stylesheet" href="css/btnStatic.css">
+    <link rel="stylesheet" href="css/navigation.css">
+    
     
   </head>
 
@@ -18,13 +21,10 @@ session_start();
     <div class="nav nav-pills">
       <div class="container">
         <ul class="pull-left">
-          <li class="active"><a href="#">Info </a></li>
-          <!--<li><a href="#">Mapa </a></li>-->
         </ul>
         <ul class="pull-right">
-          <li><a href="#">Inicia sesion </a></li>
-          <li><a href="registro.php">Registrate </a></li>
-          <li><a href="#">Guia </a></li>
+           <li class="active"><a href="#">Info </a></li>
+          <li><a href="registro.php">Guia </a></li> 
         </ul>
       </div>
     </div>
